--- a/services/user-service/Cargo.toml
+++ b/services/user-service/Cargo.toml
@@ -10,3 +10,21 @@ lambda_runtime = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
+aws-sdk-dynamodb = "1.0"
+aws-sdk-cognitoidentityprovider = "1.0"
+aws-config = "1.0"
+uuid = { version = "1.0", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde"] }
+validator = { version = "0.16", features = ["derive"] }
+anyhow = "1.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+auth-layer = { path = "../auth-layer" }
+once_cell = "1.0"
+
+[profile.release]
+opt-level = "z"  # Optimize for size
+lto = true       # Link-time optimization
+codegen-units = 1
+panic = "abort"
+strip = true
