--- a/services/workout-service/Cargo.toml
+++ b/services/workout-service/Cargo.toml
@@ -6,3 +6,16 @@ edition = "2021"
 # Note: TypeScript configuration for this service is located at ../../packages/tsconfig/lambda.json
 
 [dependencies]
+lambda_runtime = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+tokio = { version = "1.0", features = ["full"] }
+aws-sdk-dynamodb = "1.0"
+aws-sdk-s3 = "1.0"
+aws-config = "1.0"
+uuid = { version = "1.0", features = ["v4", "serde"] }
+chrono = { version = "0.4", features = ["serde"] }
+validator = { version = "0.16", features = ["derive"] }
+anyhow = "1.0"
+tracing = "0.1"
+tracing-subscriber = "0.3"
