--- a/services/auth-layer/Cargo.toml
+++ b/services/auth-layer/Cargo.toml
@@ -4,13 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-lambda_runtime = "0.4"
+lambda_runtime = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
 chrono = { version = "0.4", features = ["serde"] }
-jsonwebtoken = "9.0"
-reqwest = { version = "0.11", features = ["json"] }
+base64 = "0.21"
 anyhow = "1.0"
 thiserror = "1.0"
 uuid = { version = "1.0", features = ["v4", "serde"] }
