--- a/services/analytics-service/Cargo.toml
+++ b/services/analytics-service/Cargo.toml
@@ -4,14 +4,16 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-lambda_runtime = "0.8"
+lambda_runtime = "0.14"
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-aws-sdk-dynamodb = "0.30.0"
-aws-config = "0.55.3"
+aws-sdk-dynamodb = "1.0"
+aws-config = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
 anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+once_cell = "1.19"
+auth-layer = { path = "../auth-layer" }
