--- a/services/workout-service/Cargo.toml
+++ b/services/workout-service/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # Note: TypeScript configuration for this service is located at ../../packages/tsconfig/lambda.json
 
 [dependencies]
-lambda_runtime = "0.8"
+lambda_runtime = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
@@ -19,3 +19,5 @@ validator = { version = "0.16", features = ["derive"] }
 anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+once_cell = "1.19"
+auth-layer = { path = "../auth-layer" }
