--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -9,15 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.0.14",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.0.14",
+    "@tanstack/react-query": "^5.59.15",
+    "aws-amplify": "^6.0.30",
     "expo": "~54.0.7",
+    "expo-secure-store": "~13.0.2",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
-    "react": "19.1.0",
+    "react": "19.1.1",
     "react-native": "0.81.4",
+    "react-native-safe-area-context": "^4.11.2",
+    "react-native-screens": "^4.6.0",
+    "react-native-web": "^0.21.1",
     "types": "^0.1.1"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
+    "@types/react": "~19.1.1",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   },
