--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,16 +9,21 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "auth": "^1.2.3",
+    "@tanstack/react-query": "^5.59.15",
+    "@packages/auth": "workspace:*",
+    "js-cookie": "^3.0.5",
+    "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "next-intl": "^3.26.3",
+    "next-themes": "^0.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "types": "^0.1.1",
-    "ui": "^0.2.4"
+    "types": "^0.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
