--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "auth",
+  "name": "@packages/auth",
   "version": "1.0.0",
   "description": "Shared authentication package for GymCoach AI",
   "main": "dist/index.js",
