--- a/services/workout-service/Cargo.toml
+++ b/services/workout-service/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 lambda_runtime = "0.14"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_dynamo = "4.0"
 tokio = { version = "1.0", features = ["full"] }
 aws-sdk-dynamodb = "1.0"
 aws-sdk-s3 = "1.0"
