--- a/services/nutrition-service/Cargo.toml
+++ b/services/nutrition-service/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 lambda_runtime = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time"] }
 aws-sdk-dynamodb = "1.0"
 aws-sdk-s3 = "1.0"
 aws-config = "1.0"
@@ -28,3 +28,6 @@ lto = true       # Link-time optimization
 codegen-units = 1
 panic = "abort"
 strip = true
+# Additional size optimizations
+[profile.release.package."*"]
+opt-level = "z"
