added exercise library

--- a/scripts/package.json
+++ b/scripts/package.json
@@ -7,7 +7,8 @@
     "populate-foods": "node populate-foods.js"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.0.0",
-    "@aws-sdk/lib-dynamodb": "^3.0.0"
+    "@aws-sdk/client-dynamodb": "^3.896.0",
+    "@aws-sdk/lib-dynamodb": "^3.896.0",
+    "uuid": "^13.0.0"
   }
 }
