finished with workouts and analytics

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,7 +5,8 @@
       "@/*": [
         "./src/*"
       ]
-    }
+    },
+    "jsx": "preserve"
   },
   "include": [
     "../../packages/tsconfig/next-env.d.ts",
