--- a/services/analytics-service/Cargo.toml
+++ b/services/analytics-service/Cargo.toml
@@ -9,6 +9,7 @@ tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 aws-sdk-dynamodb = "1.0"
+aws-sdk-s3 = "1.0"
 aws-config = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
@@ -16,4 +17,6 @@ anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 once_cell = "1.19"
+base64 = "0.22"
 auth-layer = { path = "../auth-layer" }
+aws_lambda_events = "0.15"
