--- a/GymCoachClean/package.json
+++ b/GymCoachClean/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@tanstack/react-query": "^5.90.2",
+    "@types/react-native-vector-icons": "^6.4.18",
     "aws-amplify": "^6.15.7",
     "react": "18.2.0",
     "react-native": "0.73.4",
@@ -30,13 +31,15 @@
     "react-native-device-info": "^10.14.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.37.0",
     "react-native-svg": "^14.2.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.3.0",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "web-streams-polyfill": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
