--- a/GymCoachClean/package.json
+++ b/GymCoachClean/package.json
@@ -32,6 +32,7 @@
     "react-native-gesture-handler": "^2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "^3.37.0",
