--- a/GymCoachClean/package.json
+++ b/GymCoachClean/package.json
@@ -39,6 +39,8 @@
     "react-native-svg": "^14.2.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.3.0",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/messaging": "^20.5.0",
     "uuid": "^13.0.0",
     "web-streams-polyfill": "^4.2.0"
   },
