--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ members = [
     "services/auth-layer",
     "services/coaching-service",
     "services/metrics-collector",
+    "services/notification-service",
+    "services/notification-scheduler",
     "services/nutrition-service",
     "services/performance-optimizer",
     "services/security-middleware",
@@ -23,9 +25,13 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 aws-sdk-dynamodb = "1.0"
 aws-sdk-s3 = "1.0"
+aws-sdk-sns = "1.0"
+aws-sdk-lambda = "1.0"
 aws-config = "1.0"
 uuid = { version = "1.0", features = ["v4"] }
 chrono = { version = "0.4", features = ["serde"] }
+chrono-tz = "0.8"
+validator = { version = "0.16", features = ["derive"] }
 anyhow = "1.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
@@ -33,3 +39,4 @@ once_cell = "1.19"
 base64 = "0.22"
 aws_lambda_events = "0.15"
 urlencoding = "2.1"
+reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
