--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,9 @@
     "next-themes": "^0.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "firebase": "^10.13.2",
+    "workbox-webpack-plugin": "^7.1.0",
+    "next-pwa": "^5.6.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "types": "^0.1.1"
