created reuseable router in packages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
     "services/user-profile-service",
     "services/user-service",
     "services/workout-service",
+    "packages/lambda-router",
     "tests/rust-tests",
 ]
 
