--- a/services/nutrition-service/Cargo.toml
+++ b/services/nutrition-service/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 lambda_runtime = "0.8"
+lambda-router = { path = "../../packages/lambda-router" }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time"] }
@@ -21,6 +22,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 auth-layer = { path = "../auth-layer" }
 once_cell = "1.0"
+async-trait = "0.1"
 
 [profile.release]
 opt-level = "z"  # Optimize for size
