--- a/services/notification-scheduler/Cargo.toml
+++ b/services/notification-scheduler/Cargo.toml
@@ -19,5 +19,5 @@ tracing-subscriber = { workspace = true }
 once_cell = "1.0"
 
 [[bin]]
-name = "bootstrap"
+name = "notification-scheduler"
 path = "src/main.rs"
