--- a/services/analytics-service/Cargo.toml
+++ b/services/analytics-service/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-lambda_runtime = "0.14"
+lambda_runtime = "0.8"
+lambda-router = { path = "../../packages/lambda-router" }
+async-trait = "0.1"
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
