--- a/services/notification-service/Cargo.toml
+++ b/services/notification-service/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-lambda_runtime = { workspace = true }
+lambda_runtime = "0.8"
+lambda-router = { path = "../../packages/lambda-router" }
+async-trait = "0.1"
 serde = { workspace = true }
 serde_json = { workspace = true }
 tokio = { workspace = true }
