--- a/services/user-profile-service/Cargo.toml
+++ b/services/user-profile-service/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 lambda_runtime = "0.8"
+lambda-router = { path = "../../packages/lambda-router" }
+async-trait = "0.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.0", features = ["full"] }
