--- a/GymCoachClean/package.json
+++ b/GymCoachClean/package.json
@@ -18,13 +18,18 @@
     "@aws-sdk/credential-providers": "^3.901.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^20.5.0",
+    "@react-native-firebase/messaging": "^20.5.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@tanstack/react-query": "^5.90.2",
     "@types/react-native-vector-icons": "^6.4.18",
     "aws-amplify": "^6.15.7",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^7.2.1",
     "react": "18.2.0",
+    "react-i18next": "^13.5.0",
     "react-native": "0.73.4",
     "react-native-crypto": "^2.2.1",
     "react-native-crypto-js": "^1.0.0",
@@ -32,6 +37,7 @@
     "react-native-gesture-handler": "^2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-localize": "^3.5.4",
     "react-native-markdown-display": "^7.0.2",
     "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.14.1",
@@ -39,9 +45,6 @@
     "react-native-svg": "^14.2.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-vector-icons": "^10.3.0",
-    "@react-native-firebase/app": "^20.5.0",
-    "@react-native-firebase/messaging": "^20.5.0",
-    "uuid": "^13.0.0",
     "web-streams-polyfill": "^4.2.0"
   },
   "devDependencies": {
