--- a/apps/web/.env.static
+++ b/apps/web/.env.static
@@ -13,3 +13,4 @@ NEXT_PUBLIC_AWS_REGION=eu-north-1
 # API Configuration - Direct CloudFront (no proxy needed in production)
 NEXT_PUBLIC_API_URL=https://d12pveuxxq3vvn.cloudfront.net
 NEXT_PUBLIC_CLOUDFRONT_URL=https://d12pveuxxq3vvn.cloudfront.net
+     NEXT_PUBLIC_FIREBASE_VAPID_KEY=BGslzo2LdA3FH_K_RoB4QHi5XBC-xO5cRjTtvPEAykq-A9LkPWz3YxcTMijQjW7I9PbFROIGgOhFg7LzkP623gE	
