--- a/GymCoachClean/ios/GymCoachClean/GoogleService-Info.plist
+++ b/GymCoachClean/ios/GymCoachClean/GoogleService-Info.plist
@@ -1,39 +1,30 @@
-{
-  "project_info": {
-    "project_number": "YOUR_PROJECT_NUMBER",
-    "project_id": "YOUR_PROJECT_ID",
-    "storage_bucket": "YOUR_PROJECT_ID.appspot.com"
-  },
-  "client": [
-    {
-      "client_info": {
-        "mobilesdk_app_id": "YOUR_MOBILE_SDK_APP_ID",
-        "ios_client_info": {
-          "bundle_id": "com.gymcoachclean"
-        }
-      },
-      "oauth_client": [
-        {
-          "client_id": "YOUR_CLIENT_ID",
-          "client_type": 3
-        }
-      ],
-      "api_key": [
-        {
-          "current_key": "YOUR_API_KEY"
-        }
-      ],
-      "services": {
-        "appinvite_service": {
-          "other_platform_oauth_client": [
-            {
-              "client_id": "YOUR_CLIENT_ID",
-              "client_type": 3
-            }
-          ]
-        }
-      }
-    }
-  ],
-  "configuration_version": "1"
-}
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+	<key>API_KEY</key>
+	<string>AIzaSyAI38WrZpmM21w_tiJy2d79AED0p9aNjZo</string>
+	<key>GCM_SENDER_ID</key>
+	<string>460820256285</string>
+	<key>PLIST_VERSION</key>
+	<string>1</string>
+	<key>BUNDLE_ID</key>
+	<string>org.reactjs.native.example.GymCoachClean</string>
+	<key>PROJECT_ID</key>
+	<string>gymcoach-73528</string>
+	<key>STORAGE_BUCKET</key>
+	<string>gymcoach-73528.firebasestorage.app</string>
+	<key>IS_ADS_ENABLED</key>
+	<false></false>
+	<key>IS_ANALYTICS_ENABLED</key>
+	<false></false>
+	<key>IS_APPINVITE_ENABLED</key>
+	<true></true>
+	<key>IS_GCM_ENABLED</key>
+	<true></true>
+	<key>IS_SIGNIN_ENABLED</key>
+	<true></true>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:460820256285:ios:043d585ad65250b33b98f4</string>
+</dict>
+</plist>
