--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,19 +12,21 @@
   "dependencies": {
     "@packages/auth": "workspace:*",
     "@tanstack/react-query": "^5.59.15",
+    "clsx": "^2.1.1",
+    "firebase": "^10.13.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-intl": "^3.26.3",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "firebase": "^10.13.2",
-    "workbox-webpack-plugin": "^7.1.0",
-    "next-pwa": "^5.6.0",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
-    "types": "^0.1.1"
+    "tailwind-merge": "^3.3.1",
+    "types": "^0.1.1",
+    "workbox-webpack-plugin": "^7.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
