--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@packages/auth": "workspace:*",
+    "ui": "workspace:*",
     "@tanstack/react-query": "^5.59.15",
     "clsx": "^2.1.1",
     "firebase": "^10.13.2",
