--- a/GymCoachClean/package.json
+++ b/GymCoachClean/package.json
@@ -36,6 +36,7 @@
     "react-native-device-info": "^10.14.0",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-get-random-values": "^1.11.0",
+    "react-native-image-picker": "^8.2.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-localize": "^3.5.4",
     "react-native-markdown-display": "^7.0.2",
