--- a/GymCoachClean/package.json
+++ b/GymCoachClean/package.json
@@ -31,6 +31,7 @@
     "react": "18.2.0",
     "react-i18next": "^13.5.0",
     "react-native": "0.73.4",
+    "react-native-base64": "^0.2.2",
     "react-native-crypto": "^2.2.1",
     "react-native-crypto-js": "^1.0.0",
     "react-native-device-info": "^10.14.0",
